--- a/desserts.html
+++ b/desserts.html
@@ -13,7 +13,7 @@
         <br></br>
 
         <div id="home">
-            <body class="body-home">
+            <body class="body-menu">
                         
     <a href="brulee.html">
     <div class="home-menu-item">
