--- a/meals.html
+++ b/meals.html
@@ -11,7 +11,7 @@
 
         </div>
         <div id="home">
-            <body class="body-home">
+            <body class="body-menu">
            
     <a href="beeftenderloin.html">
     <div class="home-menu-item">
