--- a/starters.html
+++ b/starters.html
@@ -12,7 +12,7 @@
         </div>
         <br></br>
         <div id="home">
-            <body class="body-home">
+            <body class="body-menu">
                
         <a href="chocolatemousse.html">
             <div class="home-menu-item">
