--- a/drinks.html
+++ b/drinks.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="fontAwesome/css/all.css">
     </head>
 
- <body class="body-home">
+ <body class="body-menu">
         <div class="header">
             <a href="index.html">
                 <i class="fas fa-arrow-left"></i>
