--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <title>MY RESTUARANT MENU APP</title>
         <link rel="stylesheet" href="style.css">
     </head>
- <body class="body-home">
         <div id="home">
-            <img src="images/brea.jpg" id="home-logo-text">
-           <div class="home-menu">
+            <div class="body-menu">
+            <img src="images/brea.jpg" id="home-image">
 
             <a href= "starters.html" class="home-menu-item">
                         <p>STARTERS</p>
@@ -18,7 +17,7 @@
             <a href= "desserts.html" class="home-menu-item">
                 <p>DESSERTS</p>
         </a></br>
-        <a href= "drinks.html" class="home-menu-item">
+        <a href= "drink.html" class="home-menu-item">
             <p>DRINKS</p>
     </a></br>
 
