--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>MY RESTUARANT MENU APP</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <div style="background-image: url('img_girl.jpg');">
         <div id="home">
             <div class="body-menu">
             <img src="images/brea.jpg" id="home-image">
@@ -17,7 +18,7 @@
             <a href= "desserts.html" class="home-menu-item">
                 <p>DESSERTS</p>
         </a></br>
-        <a href= "drink.html" class="home-menu-item">
+        <a href= "drinks.html" class="home-menu-item">
             <p>DRINKS</p>
     </a></br>
 
