--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>MY RESTUARANT MENU APP</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <div style="background-image: url('img_girl.jpg');">
         <div id="home">
+            <div style="background-image: url('Images/rf.png');">
             <div class="body-menu">
             <img src="images/brea.jpg" id="home-image">
 
