--- a/starters.html
+++ b/starters.html
@@ -12,6 +12,7 @@
         </div>
         <br></br>
         <div id="home">
+            <div style="background-image: url('Images/rf.png');">
             <body class="body-menu">
                
         <a href="chocolatemousse.html">
