--- a/drinks.html
+++ b/drinks.html
@@ -7,6 +7,7 @@
     </head>
 
  <body class="body-menu">
+    <div style="background-image: url('Images/rf.png');">
         <div class="header">
             <a href="index.html">
                 <i class="fas fa-arrow-left"></i>
