--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <title>MY RESTUARANT MENU APP</title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <a href="index.html">
+        <i class="fas fa-arrow-left"></i>
+    </a>
         <div id="home">
+            <div style="background-image: url('Images/rf.png');">
             <div class="body-menu">
             <img src="images/brea.jpg" id="home-image">
 
